--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <title>CBNU SELab - Home</title>
 
-    <link rel = "stylesheet" href="{% static 'css/home.css' %}?ver=1.4">
+    <link rel = "stylesheet" href="{% static 'css/home.css' %}?ver=1.5">
     <style>
         .bg-1{
             color: black;
@@ -47,12 +47,11 @@
         <br>
         <div class="container-fluid main-content">
             <div class="row">
-                <div class="col-sm-6" >
-                    <h1 class="text-right" style="font-size:80px; color:white;"><FONT face="PlayfairDisplaySC-Bold">Who we are:</FONT></h1>
+                <div class="col-sm-6">
+                    <h1 class="text-right" style="font-size:45px; color:white;"><FONT face="PlayfairDisplaySC-Bold">Software<br>Engineering<br>Lab</FONT></h1>
                 </div>
                 <div class="col-sm-4">
-                    <br>
-                    <h1 class="text-left" style="color: white; font-size:15px; "><FONT face="PlayfairDisplay-Regular">We are a group of top SW engineers<br>to develop quality software
+                    <h1 class="text-left" style="color: white; font-size:15px; padding-top:17px"><FONT face="PlayfairDisplay-Regular">We are a group of top SW engineers<br>to develop quality software
                             and services as the discipline of developing and applying systematic and quantitative engineering
                             to software development, operation,<br>and management activities.</FONT></h1>
                 </div>
@@ -61,10 +60,7 @@
 
         <br><br><br><br><br>
         <br><br><br><br><br>
-        <br><br><br><br><br>
-        <br><br><br><br><br>
-        <br><br><br>
-
+        <br><br>
 
         <div class="container-fluid" style="background-color:rgba( 0, 0, 0, 0.5 ); padding: 50px;">
             <div class="row blog">
@@ -121,6 +117,9 @@
                             <li data-target="#blogCarousel" data-slide-to="1"></li>
                             <li data-target="#blogCarousel" data-slide-to="2"></li>
                         </ol>
+                        <script>
+
+                        </script>
 
 
                         <!-- 좌, 우 control buttons
