--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,9 @@
 {% load static %}
 <html>
 <head>
-
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel = "stylesheet" href="{% static 'css/base.css' %}?ver=2.6">
+    <link rel = "stylesheet" href="{% static 'css/base.css' %}?ver=3.4">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
@@ -22,6 +21,12 @@
             background-color: #EAEAEA; /* 클릭시 드롭다운 메뉴 배경색 변경 */
         }
 
+        .menu-btn{
+            border:none;
+            background: none;
+            padding-top:0;
+            padding-bottom:0;
+        }
 
     </style>
     <script type="text/javascript">
@@ -44,69 +49,99 @@
 </head>
 
 <body>
-
     <div id="bg_img">
         <!-- rgba는 배경색만 opacity 효과를 주기 위한 것으로 아래는 0.7의 강도 -->
-        <div class="container-fluid" style="padding-right: 0; padding-left:0">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="navbar" style="background-color:rgba( 234, 234, 234, 0.60 ); color:grey;">
-                        <a class="mr-auto font-weight-bold cbnu_logo" style="color:grey;" href="https://chungbuk.ac.kr"><img src="../../static/images/CBNU_logo2.png" width="60px" /></a>
-                        <a id="mail_logo" class="ml-auto cbnu_logo" href=""><span class="fas fa-envelope"></span> jehong@chungbuk.ac.kr</a>
-                    </div>
-                </div>
-                <div class="col-sm-12">
-                    <nav class="bg-light navbar-light navbar navbar-expand-lg navbar-white sticky-top" style="background-color:rgba( 234, 234, 234, 0.50 ) !important;">
-                        <a style="margin-left:5px;" class="mr-auto" href="/"><img src="{% static 'images/icon/selab_logo.png' %}" alt="Logo" width="50" /></a>
-                        <a class="logoName" href="/"><font>Software Engineering Lab</font></a>
-                        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-
-
-                        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                            <ul class="nav navbar-nav ml-auto">
-                                <li class="nav-item">
-                                    <a class="nav-link"  href="/">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <div class="btn-group">
-                                        <a class="nav-link menu_focus dropdown-toggle" data-toggle="dropdown" aria-expanded="false">People</a>
-                                        <div class="dropdown-menu ">
-                                            <a class="dropdown-item " style="width: 100%" href="/people/professor">Professor</a>
-                                            <a class="dropdown-item " style="width: 100%" href="/people/members">Members</a>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link"  href="/ppr/publication">Academic Activity</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link"  href="/ppr/research">Research Area</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link"  href="/notice">Notices</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/gallery">Gallery</a>
-                                </li>
-
-                                <!-- li class="nav-item">
-                                    {% if user.is_authenticated %}
-                                    <a class="nav-link" href="{% url 'main:logout' %}?next={{ request.path }}" style="color:white;"> Logout</a>
-                                    {% else %}
-                                    <a class="nav-link" href="{% url 'main:login' %}?next={{ request.path }}" style="color:white;"> Login</a>
-                                    {% endif %}
-                                </li -->
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-
+        <div class="navbar" style="background:linear-gradient(to bottom, rgba(50,50,50,0.9), rgba(60,60,60,0.65));">
+            <a class="mr-auto font-weight-bold cbnu_logo" style="color:grey;" href="https://chungbuk.ac.kr"><img src="../../static/images/CBNU_logo2.png" width="60px" /></a>
+            <a id="mail_logo" class="ml-auto cbnu_logo" style="cursor: pointer;color:white;"><span class="fas fa-envelope"></span> jehong@chungbuk.ac.kr</a>
         </div>
 
+        <nav class="bg-light navbar-light navbar navbar-expand-lg navbar-white sticky-top" style="background:linear-gradient(to bottom, rgba(60,60,60,0.65), rgba(90,90,90,0)) !important;">
+            <a style="margin-left:5px;" class="mr-auto" href="/"><img src="{% static 'images/icon/selab_logo.png' %}" alt="Logo" width="50" /></a>
+            <a class="logoName" href="/"><font>Software Engineering Lab</font></a>
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
+
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <button id="btn1" class="menu-btn">
+                            <a class="nav-link" href="/" style="color:white;">Home</a>
+                        </button>
+                    </li>
+                    <li class="nav-item">
+                        <div class="btn-group">
+                            <button id="btn2" class="menu-btn">
+                                <a class="nav-link menu_focus dropdown-toggle" data-toggle="dropdown" aria-expanded="false" style="color:white">People</a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item " style="width: 100%" href="/people/professor">Professor</a>
+                                    <a class="dropdown-item " style="width: 100%" href="/people/members">Members</a>
+                                </div>
+                            </button>
+                        </div>
+                    </li>
+                    <li class="nav-item" >
+                        <button id="btn3" class="menu-btn">
+                            <a class="nav-link" href="/ppr/publication/?q=1&?page=1" style="color:white">Academic Activity</a>
+                        </button>
+                    </li>
+                    <li class="nav-item">
+                        <button id="btn4" class="menu-btn">
+                            <a class="nav-link"  href="/ppr/research" style="color:white">Research Area</a>
+                        </button>
+                    </li>
+                    <li class="nav-item">
+                        <button id="btn5" class="menu-btn">
+                            <a class="nav-link"  href="/notice" style="color:white">Notices</a>
+                        </button>
+                    </li>
+                    <li class="nav-item">
+                        <button id="btn6" class="menu-btn">
+                            <a class="nav-link" href="/gallery" style="color:white">Gallery</a>
+                        </button>
+                    </li>
+
+                    <!-- li class="nav-item">
+                        {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'main:logout' %}?next={{ request.path }}" style="color:white;"> Logout</a>
+                        {% else %}
+                        <a class="nav-link" href="{% url 'main:login' %}?next={{ request.path }}" style="color:white;"> Login</a>
+                        {% endif %}
+                    </li -->
+                </ul>
+            </div>
+        </nav>
+
+        <script>
+            var color = "#000000";
+            {% if selected %}
+                if("{{selected}}" == "Home"){
+                    var btn = $("#btn1");
+                }
+                else if("{{selected}}" == "People"){
+                    var btn = $("#btn2");
+                }
+                else if("{{selected}}" == "Academic_Activity"){
+                    var btn = $("#btn3");
+                }
+                else if("{{selected}}" == "Research_Area"){
+                    var btn = $("#btn4");
+                }
+                else if("{{selected}}" == "Notices"){
+                    var btn = $("#btn5");
+                }
+                else{
+                    var btn = $("#btn6");
+                }
+
+                btn.css("border-bottom", "2px solid" + color);
+                btn.children().css("color", color);
+
+            {% endif %}
+
+        </script>
 
         {% block contents %}
 
