--- a/templates/people/add_member.html
+++ b/templates/people/add_member.html
@@ -68,7 +68,7 @@
                             ['view', ['fullscreen', 'help']]
                             ]
                         });
-                        $('p').css('margin-bottom','0')
+                        $('p').css('margin-bottom','0');
                         $('.note-resizebar').css('display','none');
                     });
                 </script>
