--- a/templates/notice/notice_write.html
+++ b/templates/notice/notice_write.html
@@ -55,7 +55,7 @@
                     ['view', ['fullscreen', 'help']]
                     ]
                 });
-                $('p').css('margin-bottom','0')
+                $('p').css('margin-bottom','0');
                 $('.note-resizebar').css('display','none');
             });
         </script>
